# agent-adk-fabric

./: .env.example  ApiFetcherCustomAgent.md  DatabaseCustomAgent.md  DecisionTreeAgent_System_Design.md  O2A_MCP_App_Architecture.pptx  README.md  app.py  main.py  mcpapp.md  pyproject.toml  run_agent.py
agent_adk_fabric/: ad_auth.py  agent_spec.py  cli.py  config_loader.py  deployer.py  registry.py  runner.py  tools.py
agent_adk_fabric/deployers/: engine_api_deployer.py  local_adk_deployer.py
agents/: dev_agent.yaml  prod_agent.yaml
config/: ad_groups.yaml
